--- a/electron/public/html/index.html
+++ b/electron/public/html/index.html
@@ -13,16 +13,21 @@
     <title>Hearthstone tournament generator</title>
   </head>
   <body>
-    <ul>
-      <li><a href="index.html">Main Page</a></li>
-      <li><a href="Round1.html">Swiss 1</a></li>
-      <li><a href="Round2.html">Swiss 2</a></li>
-      <li><a href="Round3.html">Swiss 3</a></li>
-      <li><a href="Round4.html">Swiss 4</a></li>
-      <li><a href="Round5.html">Swiss 5</a></li>
-      <li><a href="Round6.html">Swiss 6</a></li>
-    </ul>
-    <div id="bodyText">
+    <div id="wrapper">
+      <div id="navBar">
+        <ul>
+          <li><a href="index.html">Main Page</a></li>
+          <li><a href="Round1.html">Swiss 1</a></li>
+          <li><a href="Round2.html">Swiss 2</a></li>
+          <li><a href="Round3.html">Swiss 3</a></li>
+          <li><a href="Round4.html">Swiss 4</a></li>
+          <li><a href="Round5.html">Swiss 5</a></li>
+          <li><a href="Round6.html">Swiss 6</a></li>
+        </ul>
+      </div>
+      <div id="bodyContent">
+        <h1>Hearthstone Tournament</h1>
+      </div>
     </div>
     <script>
       window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = { isDisabled: true };
